Use the right OpenCV package?

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
     packages:
     - cmake
     - libgavl-dev
-    - libopencv-dev
+    - libopencv-core-dev
     - libcairo2-dev
 
 install:
