--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,21 @@ dist: trusty
 addons:
   apt:
     packages:
-    - cmake
-    - libgavl-dev
-    - libopencv-core-dev
-    - libcairo2-dev
+      - wget
+      - cmake
+      - libgavl-dev
+      - libopencv-core-dev
+      - libcairo2-dev
+
+before_install:
+  - wget http://futhark-lang.org/releases/futhark-nightly-linux-x86_64.tar.xz
+  - tar xf futhark-nightly-linux-x86_64.tar.xz
+  - (cd futhark-nightly-linux-x86_64/ && PREFIX=$HOME/.local make install)
+  - git submodule update --init
 
 install:
- - git submodule update --init
- - (cd frei0r && cmake . && make)
- - make
+  - (cd frei0r && cmake . && make)
+  - make
 
 script:
- - make test
+  - make test
